--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,9 @@ repos:
     rev: 22.10.0
     hooks:
     -   id: black
+- repo: local
+  hooks:
+  - id: run_tests
+    language: script
+    name: Run tests
+    entry: ./run_test.sh
