lets fail a pytest

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,5 +13,5 @@ repos:
   hooks:
   - id: run_tests
     language: script
-    name: Run tests
+    name: Run pytest
     entry: ./test_code/run_test.sh
